2006-12-06  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/item_amount.cpp: Fixed visibility of item amount window.

2006-12-05  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert1.png: Improved the tiling behavior
	of the cliffs (still not gridless but at least the edges fit
	together in the most common situations)

2006-12-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/engine.h, src/gui/windowcontainer.h,
	src/gui/viewport.cpp, src/gui/gui.cpp, src/gui/gui.h,
	src/gui/debugwindow.cpp, src/gui/inventorywindow.cpp,
	src/gui/viewport.h, src/engine.cpp, src/CMakeLists.txt,
	src/Makefile.am: Introduced a new class Viewport which combines the
	drawing code from Engine with the (rather misplaced) input handling
	from the Gui class. Also, it's a Container itself which should allow
	for extending it to show Guichan widgets on map coordinates.

2006-12-03  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/sound.cpp, src/monster.cpp, src/sound.h,
	src/resources/soundeffect.cpp, src/resources/resourcemanager.cpp:
	Don't try to play empty strings as sounds, and don't return a
	SoundEffect instance when Mix_Chunk loading failed.
	* src/beingmanager.cpp, src/npc.cpp, src/npc.h: Show NPC names.
	* src/game.cpp, src/gui/char_server.cpp, src/gui/window.cpp,
	src/gui/login.cpp, src/gui/char_select.cpp, src/gui/ok_dialog.cpp,
	src/gui/confirm_dialog.cpp, src/gui/ok_dialog.h, src/gui/window.h,
	src/gui/confirm_dialog.h, src/gui/register.cpp: Windows now default
	to invisible, since this seems the most common case.

2006-12-02  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/chest-leather-female.png: A little correction
	at the female leather shirt by mangamaniac.

2006-12-01  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/beinghandler.cpp, src/being.h, src/being.cpp, src/monster.h,
	src/gui/gui.cpp: Visible equipment slot numbers are now converted by
	the beinghandler from eAthena to our system. No more distinction