@@ -1,3 +1,7 @@
+2006-12-06  Philipp Sehmisch  <tmw@crushnet.org>
+
+    * src/net/beinghandler.cpp: Fixed crashs when changing equipment.
+
 2006-12-06  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/gui/item_amount.cpp: Fixed visibility of item amount window.
